--- a/css/example/h.html
+++ b/css/example/h.html
@@ -4,28 +4,16 @@
 	<meta charset="utf-8">
 	<title>HTML 문서</title>
 	<style>
-		#a{
-			width: 100px; height: 50px;
-			background-color: orange;
-			float: right;
-		}
-		#b{
+		div{
 			width: 100px; height: 100px;
-			background-color: royalblue;
-			float: left;
-		}
-		p{
-			clear: both;
+			background-color: red;
+			position: relative;
+			top: 100px; left: 100px;
 		}
 	</style>
 </head>
 <body>
-	<div id="a">a</div>
-	<div id="b">b</div>
-	<p>세 번째 태그</p>
-	<p>세 번째 태그</p>
-	<p>세 번째 태그</p>
-	<p>세 번째 태그</p>
-	<p>세 번째 태그</p>
+	<div></div>
+	<p>p태그p태그p태그p태그p태그p태그p태그p태그</p>
 </body>
 </html>
