--- a/js/ToDoList/index.html
+++ b/js/ToDoList/index.html
@@ -47,7 +47,7 @@
             <div>Bussiness</div>
           </label>
           <label>
-            <input type="radio" name="category" id="category2" value="business">
+            <input type="radio" name="category" id="category2" value="personal">
             <span class="bubble personal"></span>
             <div>Personal</div>
           </label>
